# fog

./: README.md  goes_geometry_demo.py  pyproject.toml  render_all_of_today.py
docs/: index.html
examples/: channel2_overlay_config.json
scripts/: cleanup_daily_s3_renders.py  downsize_im.py  render_all_of_today.py  render_many_days.py  thicken_edge_image.py
src/fog/: __init__.py  aws.py  cli.py  config.py  daily_render_cleanup.py  fetch.py  probability.py  projection.py  render_daily.py  render_now.py  rendering.py  s3_uploader.py  visualize.py
tests/: test_utils.py
